--- a/public/styles.css
+++ b/public/styles.css
@@ -3,7 +3,7 @@
 }
 
 button {
-    background-color: black;
+    background-color: rgb(0, 255, 195);
     color: rgb(252, 3, 3);
     border: none;
     border-right: 2px solid rgb(169, 254, 0);
